# syfop

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  env.sh  env.yml  network.py  pyproject.toml  pypsa.ipynb  test_network.py  try-with-linopy.ipynb
.github/workflows/: dev.yml  tests.yml
doc/: conf.py  how-to-install.md  how-to-use.md  index.rst  installation.md  limitations.rst  optimization-model.md  requirements.txt
doc/api_reference/: index.rst  syfop.network.rst  syfop.node.rst  syfop.util.rst
notebooks/: demo.ipynb  init.py  prototype_from_2021_with_gurobipy.ipynb  pyomo.ipynb  reproduce-brazil-paper.ipynb  try-with-linopy.ipynb
syfop/: __init__.py  network.py  node.py  node_base.py  units.py  util.py  version.py
tests/: __init__.py  test_network.py  test_node.py  test_util.py  test_version.py
