[project]
name = "syfop"
description = "Syfop Synthetic Fuel Optimizer"
authors = [
    {name = "Peter Regner", email = "peter.regner@boku.ac.at"},
]
requires-python = ">=3.8"  # not tested with all python versions, no idea what is needed
readme = "README.md"
dynamic = ["version"]
classifiers=[
    'License :: OSI Approved :: MIT License',
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3',
]
dependencies = [
    "xarray > 2024.2.0",
    "pandas >= 1.5",    # no idea which version is really necessary
    "linopy == 0.3.8",  # might work also with newer versions, but they break APIs often
    "pint",             # used for units
    "pint-xarray",      # used for units for xarray objects
    "highspy",
    "networkx",
    "netgraph",         # optional dependency for plotting
]

[project.optional-dependencies]
# optional dependencies
extra = [
    "graphviz",
    "pygraphviz",
]

# for development
dev = [
    "pre-commit",
    "black == 22.12.0",
    "isort",
    "flake8",
    # "flake8-docstrings",  # this is too strict ATM but would be nice to add
]

# for running tests
test = [
    "pytest",
    "pytest-cov"
]
# for building the documentation
doc = [
    "sphinx",
    "sphinxawesome_theme",
    "myst-parser",              # support for markdown
]

[tool.setuptools]
packages = ["syfop"]

[tool.setuptools.dynamic]
version = {attr = "syfop.version.version"}


[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/customize.html
addopts = '''
-ra
--tb=auto
-k "not gurobi"
-W error
--doctest-modules
'''
# -ra: show extra test summary [...] (a)ll except passed [...]
# --tb=style: traceback print mode (auto/long/short/line/native/no)
# -W: set which warnings to report, "error" turns matching warnings into exceptions

norecursedirs = [
  ".git",
  ".github",
  ".pytest_cache",
  ".ipynb_checkpoints",
  "__pycache__",
]

[tool.coverage.run]
# https://coverage.readthedocs.io/en/latest/config.html
branch = true
omit = [
  "tests/test*",
]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
# https://black.readthedocs.io/en/stable/pyproject_toml.html
line-length = 99
include = '\.pyi?$'
target-version = ['py310']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.history
  | \.pytest_cache
  | \.ipynb_checkpoints
)/
'''
[tool.isort]
profile = "black"
